2010-05-13  Oliver Hader  <oliver@typo3.org>

	* Initial version